# harboragent

./: .env.example  .gitignore  CLOUDFLARE_PAGES_ENV_SETUP.md  DEPLOYMENT_ERRORS_TAX_ASSIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_WORKFLOW.md  DEV_AUDIT_harbor_agent.md  EXPERIMENT_001_SETUP.md  FIDELITY_AUDIT_SUMMARY.md  FRONTEND_README.md  GPT5_CONTEXT_PROMPT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLEXITY_ASSESSMENT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LOGO_COLOR_RECOMMENDATIONS.md  ORCHESTRATOR_LAB_NOTES.md  POSTMARK_INTEGRATION_SUMMARY.md  PRODUCT_BRIEF_FOR_MARKETING.md  PRODUCT_GAPS.md  QUICK_START.md  README.md  READTHISFIRST.md  SECRETS_SETUP_SUMMARY.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_FIX_COMPLETE.md  SECURITY_INCIDENT_SSH_KEY.md  SSH_KEY_ROTATION_COMPLETE.md  STRIPE_CLOUDFLARE_AUDIT.md  STRIPE_WEBHOOK_SETUP.md  VERIFICATION_FLOW_AUDIT.md  WEBHOOK_SETUP_COMPLETE.md  create_paid_pack_files.py  deploy.sh  env.template  extract_docx.py  index.html  package-lock.json  package.json  parse_paid_pack.py  (+5 more)
orchestrator/: README.md  __init__.py  __main__.py  api.py  config.py  graph.py  pyproject.toml  requirements.txt  state.py  test_json_preservation.py  test_json_preservation_standalone.py  verify_json_preservation.py
orchestrator/nodes/: __init__.py  deep_research.py  intake.py  scoring_gate.py  summary.py  validation.py
orchestrator/puppeteer/: __init__.py  actions.py  executor.py  loop.py  policy_base.py  policy_rl.py  policy_rule_based.py  policy_static.py  state_adapter.py
orchestrator/telemetry/: __init__.py  logger.py  (+2 more)
(+104 files in other folders)
